; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/top/extr_display.c_i_timeofday.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/top/extr_display.c_i_timeofday.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@smart_terminal = common dso_local global i64 0, align 8
@screen_width = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"    \00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"%-8.8s\0A\00", align 1
@lastline = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i_timeofday(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @smart_terminal, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i64, i64* @screen_width, align 8
  %7 = sub nsw i64 %6, 8
  %8 = call i32 @Move_to(i64 %7, i32 0)
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @stdout, align 4
  %11 = call i32 @fputs(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %10)
  br label %12

12:                                               ; preds = %9, %5
  %13 = load i32*, i32** %2, align 8
  %14 = call i8* @ctime(i32* %13)
  %15 = getelementptr inbounds i8, i8* %14, i64 11
  %16 = call i32 @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  store i32 1, i32* @lastline, align 4
  ret void
}

declare dso_local i32 @Move_to(i64, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @ctime(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
